# action-ecs-deploy

./: .dockerignore  AGENTS.md  Dockerfile  README.md  action.yml  entrypoint.sh  pyproject.toml  requirements.in  requirements.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
